# pycountspromaxulti

./: CONTRIBUTING.md  README.md  pyproject.toml
docs/: conf.py  example.ipynb
src/pycountspromaxulti/: __init__.py
tests/: test_pycounts.py
