[tool.poetry]
name = "pycounts"
version = "0.1.0"
description = "Calculate word counts in atext file!"
authors = ["Long Nguyen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
